# shared-color-targets

./: .gitignore  Makefile.am  NEWS  README  RELEASE  autogen.sh  configure.ac
contrib/: shared-color-targets.spec.in
targets/: Makefile.am  test.it87
targets/wolf_faust/: LICENSE  Makefile.am  README
targets/wolf_faust/reflective/: Makefile.am  R000926.it8  R000926WhiteBacking.it8  R010315.it8  R010315WhiteBacking.it8  R011201.it8  R011201WhiteBacking.it8  R011220.it8  R021105.it8  R021105WhiteBacking.it8  R021106.it8  R021106WhiteBacking.it8  R030507.it8  R030507WhiteBacking.it8  R030508.it8  R030508WhiteBacking.it8  R030510.it8  R031123.it8  R031123WhiteBacking.it8  R031124.it8  R031124WhiteBacking.it8  R031125.it8  R031125WhiteBacking.it8  R031126.it8  R031126WhiteBacking.it8  R040220.it8  R040807.it8  R040807WhiteBacking.it8  R041016.it8  R041016WhiteBacking.it8  R041110.it8  R050301.it8  R050301WhiteBacking.it8  R050302.it8  R050302WhiteBacking.it8  R051001.it8  R051001WhiteBacking.it8  R060101.it8  R060406.it8  R060406WhiteBacking.it8  (+65 more)
targets/wolf_faust/transmissive/: A050407.it8  A050408.it8  A050409.it8  A050410.it8  A051023.it8  A051024.it8  A060401.it8  A060521.it8  A060522.it8  A070525.it8  A071128.it8  A080701.it8  A090301.it8  A091201.it8  A100610.it8  A101211.it8  A110611.it8  A111011.it8  A120115.it8  A120828.it8  A130603.it8  A140201.it8  A141112.it8  A160425.it8  E020429.it8  E040227.it8  E040407.it8  E040527.it8  E040528.it8  E040629.it8  E040630.it8  E040701.it8  E041210.it8  E041211.it8  E050202.it8  E050203.it8  E050925.it8  E050926.it8  E051025.it8  E051026.it8  (+121 more)
tools/: Makefile.am  update-targets.sh
