targetsdir = $(datadir)/color/targets/wolf_faust/reflective
targets_DATA =						\
	R000926.it8					\
	R000926WhiteBacking.it8				\
	R010315.it8					\
	R010315WhiteBacking.it8				\
	R011201.it8					\
	R011201WhiteBacking.it8				\
	R011220.it8					\
	R021105.it8					\
	R021105WhiteBacking.it8				\
	R021106.it8					\
	R021106WhiteBacking.it8				\
	R030507.it8					\
	R030507WhiteBacking.it8				\
	R030508.it8					\
	R030508WhiteBacking.it8				\
	R030510.it8					\
	R031123.it8					\
	R031123WhiteBacking.it8				\
	R031124.it8					\
	R031124WhiteBacking.it8				\
	R031125.it8					\
	R031125WhiteBacking.it8				\
	R031126.it8					\
	R031126WhiteBacking.it8				\
	R040220.it8					\
	R040807.it8					\
	R040807WhiteBacking.it8				\
	R041016.it8					\
	R041016WhiteBacking.it8				\
	R041110.it8					\
	R050301.it8					\
	R050301WhiteBacking.it8				\
	R050302.it8					\
	R050302WhiteBacking.it8				\
	R051001.it8					\
	R051001WhiteBacking.it8				\
	R060101.it8					\
	R060406.it8					\
	R060406WhiteBacking.it8				\
	R061212.it8					\
	R061212WhiteBacking.it8				\
	R070212.it8					\
	R070212WhiteBacking.it8				\
	R070801.it8					\
	R070807.it8					\
	R070919.it8					\
	R070919WhiteBacking.it8				\
	R080415.it8					\
	R080415WhiteBacking.it8				\
	R080505.it8					\
	R090104.it8					\
	R090104WhiteBacking.it8				\
	R090405.it8					\
	R090405WhiteBacking.it8				\
	R090624.it8					\
	R090702.it8					\
	R090702WhiteBacking.it8				\
	R090703.it8					\
	R090703WhiteBacking.it8				\
	R100204.it8					\
	R100204WhiteBacking.it8				\
	R100205.it8					\
	R100205WhiteBacking.it8				\
	R100604.it8					\
	R100604WhiteBacking.it8				\
	R101001.it8					\
	R101001WhiteBacking.it8				\
	R101208.it8					\
	R101208WhiteBacking.it8				\
	R110112.it8					\
	R110112WhiteBacking.it8				\
	R110714.it8					\
	R110714WhiteBacking.it8				\
	R110903.it8					\
	R111204.it8					\
	R111204WhiteBacking.it8

EXTRA_DIST =						\
	$(targets_DATA)

