targetsdir = $(datadir)/color/targets/wolf_faust/transmissive
targets_DATA =						\
	A050407.it8					\
	A050408.it8					\
	A050409.it8					\
	A050410.it8					\
	A051023.it8					\
	A051024.it8					\
	A060401.it8					\
	A060521.it8					\
	A060522.it8					\
	A070525.it8					\
	A071128.it8					\
	A080701.it8					\
	A090301.it8					\
	E020429.it8					\
	E040227.it8					\
	E040407.it8					\
	E040527.it8					\
	E040528.it8					\
	E040629.it8					\
	E040630.it8					\
	E040701.it8					\
	E041210.it8					\
	E041211.it8					\
	E050202.it8					\
	E050203.it8					\
	E050925.it8					\
	E050926.it8					\
	E051025.it8					\
	E051026.it8					\
	E060110.it8					\
	E060111.it8					\
	E060829.it8					\
	E070508.it8					\
	E070509.it8					\
	E080220.it8					\
	E080515.it8					\
	E090401.it8					\
	E091111.it8					\
	F020430.it8					\
	F040218.it8					\
	F040425.it8					\
	F040512.it8					\
	F040521.it8					\
	F050401.it8					\
	F050720.it8					\
	F050721.it8					\
	F060519.it8					\
	F060521.it8					\
	F070907.it8					\
	F080601.it8					\
	N031018.it8					\
	N040401.it8					\
	N040601.it8					\
	N040602.it8					\
	N050525.it8					\
	N050526.it8					\
	N060527.it8					\
	N060528.it8					\
	N080301.it8					\
	N090322.it8					\
	N091125.it8					\
	V030302.it8					\
	V030303.it8					\
	V040102.it8					\
	V040220.it8					\
	V040221.it8					\
	V040510.it8					\
	V040511.it8					\
	V041214.it8					\
	V041215.it8					\
	V041216.it8					\
	V041217.it8					\
	V050505.it8					\
	V050712.it8					\
	V050727.it8					\
	V050728.it8					\
	V050729.it8					\
	V070218.it8					\
	V071010.it8					\
	V080513.it8					\
	V090119.it8					\
	V090721.it8

EXTRA_DIST =						\
	$(targets_DATA)

