targetsdir = $(datadir)/color/targets/wolf_faust/transmissive
targets_DATA =						\
	A050407.it8					\
	A050408.it8					\
	A050409.it8					\
	A050410.it8					\
	A051023.it8					\
	A051024.it8					\
	A060401.it8					\
	A060521.it8					\
	A060522.it8					\
	A070525.it8					\
	A071128.it8					\
	A080701.it8					\
	A090301.it8					\
	A091201.it8					\
	A100610.it8					\
	A101211.it8					\
	A110611.it8					\
	A111011.it8					\
	A120115.it8					\
	A120828.it8					\
	A130603.it8					\
	A140201.it8					\
	A141112.it8					\
	E020429.it8					\
	E040227.it8					\
	E040407.it8					\
	E040527.it8					\
	E040528.it8					\
	E040629.it8					\
	E040630.it8					\
	E040701.it8					\
	E041210.it8					\
	E041211.it8					\
	E050202.it8					\
	E050203.it8					\
	E050925.it8					\
	E050926.it8					\
	E051025.it8					\
	E051026.it8					\
	E060110.it8					\
	E060111.it8					\
	E060829.it8					\
	E070508.it8					\
	E070509.it8					\
	E080220.it8					\
	E080515.it8					\
	E090401.it8					\
	E091111.it8					\
	E100221.it8					\
	E100505.it8					\
	E100701.it8					\
	E101212.it8					\
	E110220.it8					\
	E110411.it8					\
	E110803.it8					\
	E111007.it8					\
	E120104.it8					\
	E120607.it8					\
	E121001.it8					\
	E130315.it8					\
	E130401.it8					\
	E131102.it8					\
	E140430.it8					\
	E141011.it8					\
	E141027.it8					\
	E150202.it8					\
	F020430.it8					\
	F040218.it8					\
	F040425.it8					\
	F040512.it8					\
	F040521.it8					\
	F050401.it8					\
	F050720.it8					\
	F050721.it8					\
	F060519.it8					\
	F060521.it8					\
	F070907.it8					\
	F080601.it8					\
	F100301.it8					\
	F101122.it8					\
	F110406.it8					\
	F110807.it8					\
	F111224.it8					\
	F120615.it8					\
	F120911.it8					\
	F130405.it8					\
	F140203.it8					\
	F140601.it8					\
	F150204.it8					\
	F151006.it8					\
	N031018.it8					\
	N040401.it8					\
	N040601.it8					\
	N040602.it8					\
	N050525.it8					\
	N050526.it8					\
	N060527.it8					\
	N060528.it8					\
	N080301.it8					\
	N090322.it8					\
	N091125.it8					\
	N100606.it8					\
	N110201.it8					\
	N110601.it8					\
	N111122.it8					\
	N111125.it8					\
	N111203.it8					\
	N120606.it8					\
	N121111.it8					\
	N130501.it8					\
	N140131.it8					\
	N140903.it8					\
	N150203.it8					\
	V030302.it8					\
	V030303.it8					\
	V040102.it8					\
	V040220.it8					\
	V040221.it8					\
	V040510.it8					\
	V040511.it8					\
	V041214.it8					\
	V041215.it8					\
	V041216.it8					\
	V041217.it8					\
	V050505.it8					\
	V050712.it8					\
	V050727.it8					\
	V050728.it8					\
	V050729.it8					\
	V070218.it8					\
	V071010.it8					\
	V080513.it8					\
	V090119.it8					\
	V090721.it8					\
	V100201.it8					\
	V100401.it8					\
	V100710.it8					\
	V110202.it8					\
	V110606.it8					\
	V110902.it8					\
	V111010.it8					\
	V120101.it8					\
	V120306.it8					\
	V120601.it8					\
	V120913.it8					\
	V130214.it8					\
	V130608.it8					\
	V131103.it8					\
	V140202.it8					\
	V140410.it8					\
	V141121.it8					\
	V150205.it8					\
	V150507.it8

EXTRA_DIST =						\
	$(targets_DATA)

